ks - fixed forgive event diaglog not showing. BUG 3391 displaying forgive text same way as red flag report.  Added another constructor to EventReportItem. removed mouse over anchors on small charts.

--- a/web/src/main/webapp/css/main.css
+++ b/web/src/main/webapp/css/main.css
@@ -1917,6 +1917,12 @@ color: #fff;
 	padding: 5px;
 	margin: 5px;
 	}
+	
+.tiny_title div {
+	cursor: pointer;
+	font-weight: bold;
+	text-decoration: underline;
+}
 
 .tiny_title a:active,
 .tiny_title a:link,
